* Improved styling so that collapsing and expanding symbols use a       fixed-width font, but category names do not     * When using the option to have category names trigger expansion, and not       showing posts, categories with no subcategories now link to the category     * Added option to use images instead of html for collapse/expand characters     * +/- now uses UTF-8 encoding instead of html entities (may not work for       pages not encoded in UTF-8
git-svn-id: https://plugins.svn.wordpress.org/collapsing-categories/trunk@62374 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/collapsCat.css
+++ b/collapsCat.css
@@ -28,7 +28,7 @@ span.collapsCat {border:0;
  margin:0; 
  cursor:pointer;
 font-size:1.3em;
- font-family: Monaco, 'Andale Mono', Courier, monospace;
+/* font-family: Monaco, 'Andale Mono', Courier, monospace;*/
 }
 
 #sidebar li.collapsCat:before {content:'';} 
